# UAPKI

integration/onec-native/: CMakeLists.txt  README.md
integration/onec-native/examples/: usage.bsl
integration/onec-native/include/onec/: addin_api.hpp  base64.hpp  uapki_json_client.hpp  variant_utils.hpp
integration/onec-native/packaging/: MANIFEST.linux-x86_64.xml  MANIFEST.windows.xml
integration/onec-native/src/: base64.cpp  entry.cpp  uapki_component.cpp  uapki_component.hpp  uapki_json_client.cpp  variant_utils.cpp
